--- a/package.json
+++ b/package.json
@@ -1,13 +1,45 @@
 {
   "name": "edit-in-place",
-  "version": "0.0.0",
+  "version": "0.0.1",
+  "keywords": [
+    "schematics",
+    "library",
+    "opensource",
+    "boilerplate",
+    "angular"
+  ],
+  "publishConfig": {
+    "access": "public"
+  },
+  "bugs": {
+    "url": "https://github.com/ngneat/edit-in-place/issues"
+  },
+  "homepage": "https://github.com/ngneat/edit-in-place#readme",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/ngneat/edit-in-place"
+  },
+  "author": {
+    "name": "Gérôme Grignon",
+    "email": "gerome.grignon.lp2@gmail.com",
+    "url": "https://github.com/geromegrignon"
+  },
+  "license": "MIT",
   "scripts": {
     "ng": "ng",
     "start": "ng serve",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "contributors:add": "all-contributors add",
+    "hooks:pre-commit": "node hooks/pre-commit.js",
+    "commit": "git-cz",
+    "release:first": "npm run release -- --first-release",
+    "build:lib": "ng build @ngneat/edit-in-place",
+    "test:lib": "ng test @ngneat/edit-in-place",
+    "release": "cd projects/ngneat/edit-in-place && standard-version --infile ../../../CHANGELOG.md",
+    "test:lib:headless": "cross-env CI=true npm run test:lib"
   },
   "private": true,
   "dependencies": {
@@ -19,12 +51,14 @@
     "@angular/platform-browser": "~10.0.2",
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
+    "@ngneat/lib": "^1.0.4",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular-devkit/build-ng-packagr": "~0.1000.3",
     "@angular/cli": "~10.0.1",
     "@angular/compiler-cli": "~10.0.2",
     "@types/node": "^12.11.1",
@@ -38,9 +72,39 @@
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
+    "ng-packagr": "^10.0.0",
     "protractor": "~7.0.0",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~3.9.5",
+    "@commitlint/cli": "8.1.0",
+    "@commitlint/config-angular": "^8.1.0",
+    "@commitlint/config-conventional": "^8.1.0",
+    "git-cz": "^3.2.1",
+    "all-contributors-cli": "^6.8.1",
+    "lint-staged": "^9.2.0",
+    "prettier": "^2.0.5",
+    "standard-version": "^6.0.1",
+    "husky": "^3.0.1",
+    "cross-env": "^5.2.0",
+    "@ngneat/spectator": "latest"
+  },
+  "config": {
+    "commitizen": {
+      "path": "cz-conventional-changelog"
+    }
+  },
+  "lint-staged": {
+    "*.{js,json,css,scss,ts,html,component.html}": [
+      "prettier --write",
+      "git add"
+    ]
+  },
+  "husky": {
+    "hooks": {
+      "commit-msg": "commitlint -e $GIT_PARAMS",
+      "pre-commit": "npm run hooks:pre-commit && lint-staged",
+      "pre-push": "npm run test:lib:headless"
+    }
   }
 }
