--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -1,4 +1,3 @@
-/* To learn more about this file see: https://angular.io/config/tsconfig. */
 {
   "compileOnSave": false,
   "compilerOptions": {
@@ -12,9 +11,9 @@
     "importHelpers": true,
     "target": "es2015",
     "module": "es2020",
-    "lib": [
-      "es2018",
-      "dom"
-    ]
+    "lib": ["es2018", "dom"],
+    "paths": {
+      "@ngneat/edit-in-place": ["projects/ngneat/edit-in-place/src/public-api.ts"]
+    }
   }
 }
