--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -9,6 +9,18 @@
   "imageSize": 100,
   "commit": true,
   "commitConvention": "angular",
-  "contributors": [],
+  "contributors": [
+    {
+      "login": "geromegrignon",
+      "name": "Gérôme Grignon",
+      "avatar_url": "https://avatars0.githubusercontent.com/u/32737308?v=4",
+      "profile": "https://gerome-dev.netlify.com/",
+      "contributions": [
+        "code",
+        "doc",
+        "ideas"
+      ]
+    }
+  ],
   "contributorsPerLine": 7
 }
