--- a/package.json
+++ b/package.json
@@ -52,6 +52,7 @@
     "@angular/platform-browser-dynamic": "~10.0.2",
     "@angular/router": "~10.0.2",
     "@ngneat/lib": "^1.0.4",
+    "@ngneat/until-destroy": "^7.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.0.0",
     "zone.js": "~0.10.3"
