docs: add @NetanelBasal as a contributor

--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -20,6 +20,17 @@
         "doc",
         "ideas"
       ]
+    },
+    {
+      "login": "NetanelBasal",
+      "name": "Netanel Basal",
+      "avatar_url": "https://avatars1.githubusercontent.com/u/6745730?v=4",
+      "profile": "https://www.netbasal.com/",
+      "contributions": [
+        "blog",
+        "doc",
+        "ideas"
+      ]
     }
   ],
   "contributorsPerLine": 7
