chore: 🤖 build script

--- a/package.json
+++ b/package.json
@@ -35,10 +35,12 @@
     "contributors:add": "all-contributors add",
     "hooks:pre-commit": "node hooks/pre-commit.js",
     "commit": "git-cz",
-    "release:first": "npm run release -- --first-release",
-    "build:lib": "ng build @ngneat/edit-in-place",
+    "build:lib": "ng build @ngneat/edit-in-place --prod && npm run schematics:build && npm run copy",
     "test:lib": "ng test @ngneat/edit-in-place",
     "release": "cd projects/ngneat/edit-in-place && standard-version --infile ../../../CHANGELOG.md",
+    "copy": "npm run schematics:copy && cp -r README.md dist/ngneat/edit-in-place",
+    "schematics:build": "npm run build --prefix ./schematics",
+    "schematics:copy": "cp -r schematics/src/ dist/ngneat/edit-in-place/schematics",
     "test:lib:headless": "cross-env CI=true npm run test:lib",
     "prettier:check": "prettier --check \"**\"",
     "prettier": "prettier --write \"**\""
