feat(chore): update to Angular 11

--- a/package.json
+++ b/package.json
@@ -47,15 +47,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~10.0.2",
-    "@angular/common": "~10.0.2",
-    "@angular/compiler": "~10.0.2",
-    "@angular/core": "~10.0.2",
-    "@angular/forms": "~10.0.2",
-    "@angular/localize": "~10.0.2",
-    "@angular/platform-browser": "~10.0.2",
-    "@angular/platform-browser-dynamic": "~10.0.2",
-    "@angular/router": "~10.0.2",
+    "@angular/animations": "~11.0.0",
+    "@angular/common": "~11.0.0",
+    "@angular/compiler": "~11.0.0",
+    "@angular/core": "~11.0.0",
+    "@angular/forms": "~11.0.0",
+    "@angular/localize": "~11.0.0",
+    "@angular/platform-browser": "~11.0.0",
+    "@angular/platform-browser-dynamic": "~11.0.0",
+    "@angular/router": "~11.0.0",
     "@ng-bootstrap/ng-bootstrap": "^7.0.0",
     "@ngneat/lib": "^1.0.4",
     "bootstrap": "^4.5.0",
@@ -64,10 +64,10 @@
     "zone.js": "~0.10.3"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1000.1",
+    "@angular-devkit/build-angular": "~0.1100.1",
     "@angular-devkit/build-ng-packagr": "~0.1000.3",
-    "@angular/cli": "~10.0.1",
-    "@angular/compiler-cli": "~10.0.2",
+    "@angular/cli": "~11.0.1",
+    "@angular/compiler-cli": "~11.0.0",
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-angular": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
@@ -77,25 +77,25 @@
     "@types/node": "^12.11.1",
     "all-contributors-cli": "^6.8.1",
     "angular-cli-ghpages": "^0.6.2",
-    "codelyzer": "^6.0.0-next.1",
+    "codelyzer": "^6.0.1",
     "cross-env": "^5.2.0",
     "git-cz": "^3.2.1",
     "husky": "^3.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.0.0",
+    "karma": "~5.1.1",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^9.2.0",
-    "ng-packagr": "^10.0.0",
+    "ng-packagr": "^11.0.2",
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "standard-version": "^6.0.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~3.9.5"
+    "typescript": "~4.0.5"
   },
   "config": {
     "commitizen": {
