--- a/package.json
+++ b/package.json
@@ -35,7 +35,7 @@
     "contributors:add": "all-contributors add",
     "hooks:pre-commit": "node hooks/pre-commit.js",
     "commit": "git-cz",
-    "build:lib": "ng build @ngneat/edit-in-place --prod && npm run schematics:build && npm run copy",
+    "build:lib": "ng build @ngneat/edit-in-place --configuration production && npm run schematics:build && npm run copy",
     "test:lib": "ng test @ngneat/edit-in-place",
     "release": "cd projects/ngneat/edit-in-place && standard-version --infile ../../../CHANGELOG.md",
     "copy": "npm run schematics:copy && cp -r README.md dist/ngneat/edit-in-place",
@@ -47,27 +47,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~11.0.0",
-    "@angular/common": "~11.0.0",
-    "@angular/compiler": "~11.0.0",
-    "@angular/core": "~11.0.0",
-    "@angular/forms": "~11.0.0",
-    "@angular/localize": "~11.0.0",
-    "@angular/platform-browser": "~11.0.0",
-    "@angular/platform-browser-dynamic": "~11.0.0",
-    "@angular/router": "~11.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^7.0.0",
-    "@ngneat/lib": "^1.0.4",
-    "bootstrap": "^4.5.0",
+    "@angular/animations": "~12.1.1",
+    "@angular/common": "~12.1.1",
+    "@angular/compiler": "~12.1.1",
+    "@angular/core": "~12.1.1",
+    "@angular/forms": "~12.1.1",
+    "@angular/localize": "~12.1.1",
+    "@angular/platform-browser": "~12.1.1",
+    "@angular/platform-browser-dynamic": "~12.1.1",
+    "@angular/router": "~12.1.1",
+    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@ngneat/lib": "^2.0.1",
+    "bootstrap": "^5.0.2",
     "rxjs": "~6.5.5",
-    "tslib": "^2.0.0",
-    "zone.js": "~0.10.3"
+    "tslib": "^2.3.0",
+    "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~0.1100.1",
+    "@angular-devkit/build-angular": "~12.1.1",
     "@angular-devkit/build-ng-packagr": "~0.1000.3",
-    "@angular/cli": "~11.0.1",
-    "@angular/compiler-cli": "~11.0.0",
+    "@angular/cli": "~12.1.1",
+    "@angular/compiler-cli": "~12.1.1",
     "@commitlint/cli": "8.1.0",
     "@commitlint/config-angular": "^8.1.0",
     "@commitlint/config-conventional": "^8.1.0",
@@ -76,26 +76,26 @@
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^12.11.1",
     "all-contributors-cli": "^6.8.1",
-    "angular-cli-ghpages": "^0.6.2",
+    "angular-cli-ghpages": "^1.0.0-rc.2",
     "codelyzer": "^6.0.1",
     "cross-env": "^5.2.0",
     "git-cz": "^3.2.1",
     "husky": "^3.0.1",
     "jasmine-core": "~3.5.0",
     "jasmine-spec-reporter": "~5.0.0",
-    "karma": "~5.1.1",
+    "karma": "~6.3.4",
     "karma-chrome-launcher": "~3.1.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
     "karma-jasmine": "~3.3.0",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^9.2.0",
-    "ng-packagr": "^11.0.2",
+    "ng-packagr": "^12.1.0",
     "prettier": "^2.0.5",
     "protractor": "~7.0.0",
     "standard-version": "^6.0.1",
     "ts-node": "~8.3.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.0.5"
+    "typescript": "~4.3.5"
   },
   "config": {
     "commitizen": {
