--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -40,6 +40,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "arturovt",
+      "name": "Artur Androsovych",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7337691?v=4",
+      "profile": "https://medium.com/@overthesanity",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
