chore(github): add condition on dependencies installation

--- a/.github/workflows/integration.yml
+++ b/.github/workflows/integration.yml
@@ -23,7 +23,9 @@ jobs:
             ${{ runner.os }}-build-${{ env.cache-name }}-
             ${{ runner.os }}-build-
             ${{ runner.os }}-
-      - run: npm install
+      - name: install dependencies
+        if: steps.cache.outputs.cache-hit != 'true'
+        run: npm install
       - run: npm run test -- edit-in-place --no-watch --no-progress --browsers=ChromeHeadless
       - run: npm run prettier:check
         env:
