--- a/.all-contributorsrc
+++ b/.all-contributorsrc
@@ -49,6 +49,15 @@
       "contributions": [
         "code"
       ]
+    },
+    {
+      "login": "baxyz",
+      "name": "Bérenger",
+      "avatar_url": "https://avatars.githubusercontent.com/u/7852177?v=4",
+      "profile": "https://github.com/baxyz",
+      "contributions": [
+        "code"
+      ]
     }
   ],
   "contributorsPerLine": 7
