--- a/package.json
+++ b/package.json
@@ -46,32 +46,31 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/localize": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
-    "@ng-bootstrap/ng-bootstrap": "^10.0.0",
+    "@angular/animations": "^17.0.4",
+    "@angular/common": "^17.0.4",
+    "@angular/compiler": "^17.0.4",
+    "@angular/core": "^17.0.4",
+    "@angular/forms": "^17.0.4",
+    "@angular/localize": "^17.0.4",
+    "@angular/platform-browser": "^17.0.4",
+    "@angular/platform-browser-dynamic": "^17.0.4",
+    "@angular/router": "^17.0.4",
+    "@ng-bootstrap/ng-bootstrap": "^16.0.0",
     "@ngneat/lib": "^3.0.0",
-    "bootstrap": "^5.1.3",
+    "bootstrap": "^5.3.2",
     "rxjs": "~6.5.5",
     "tslib": "^2.3.1",
-    "zone.js": "~0.11.4"
+    "zone.js": "~0.14.2"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.0",
+    "@angular-devkit/build-angular": "^17.0.3",
+    "@angular/cli": "^17.0.3",
+    "@angular/compiler-cli": "^17.0.4",
     "@commitlint/cli": "15.0.0",
     "@commitlint/config-angular": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
     "@ngneat/spectator": "latest",
-    "@types/jasmine": "~3.5.0",
+    "@types/jasmine": "~5.1.4",
     "@types/jasminewd2": "~2.0.3",
     "@types/node": "^16.11.11",
     "all-contributors-cli": "^6.20.0",
@@ -80,20 +79,20 @@
     "cross-env": "^7.0.3",
     "git-cz": "^4.8.0",
     "husky": "^7.0.4",
-    "jasmine-core": "~3.5.0",
+    "jasmine-core": "~5.1.1",
     "jasmine-spec-reporter": "~7.0.0",
-    "karma": "~6.3.4",
-    "karma-chrome-launcher": "~3.1.0",
+    "karma": "~6.4.2",
+    "karma-chrome-launcher": "~3.2.0",
     "karma-coverage-istanbul-reporter": "~3.0.2",
-    "karma-jasmine": "~4.0.1",
-    "karma-jasmine-html-reporter": "^1.5.0",
+    "karma-jasmine": "~5.1.0",
+    "karma-jasmine-html-reporter": "^2.1.0",
     "lint-staged": "^12.1.2",
-    "ng-packagr": "^13.0.3",
+    "ng-packagr": "^17.0.2",
     "prettier": "^2.5.0",
     "standard-version": "^9.3.2",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~5.2.2"
   },
   "config": {
     "commitizen": {
