--- a/package.json
+++ b/package.json
@@ -46,15 +46,15 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/animations": "~13.0.0",
-    "@angular/common": "~13.0.0",
-    "@angular/compiler": "~13.0.0",
-    "@angular/core": "~13.0.0",
-    "@angular/forms": "~13.0.0",
-    "@angular/localize": "~13.0.0",
-    "@angular/platform-browser": "~13.0.0",
-    "@angular/platform-browser-dynamic": "~13.0.0",
-    "@angular/router": "~13.0.0",
+    "@angular/animations": "^14.3.0",
+    "@angular/common": "^14.3.0",
+    "@angular/compiler": "^14.3.0",
+    "@angular/core": "^14.3.0",
+    "@angular/forms": "^14.3.0",
+    "@angular/localize": "^14.3.0",
+    "@angular/platform-browser": "^14.3.0",
+    "@angular/platform-browser-dynamic": "^14.3.0",
+    "@angular/router": "^14.3.0",
     "@ng-bootstrap/ng-bootstrap": "^10.0.0",
     "@ngneat/lib": "^3.0.0",
     "bootstrap": "^5.1.3",
@@ -63,10 +63,10 @@
     "zone.js": "~0.11.4"
   },
   "devDependencies": {
-    "@angular-devkit/build-angular": "~13.0.4",
-    "@angular-devkit/build-ng-packagr": "~0.1002.0",
-    "@angular/cli": "~13.0.4",
-    "@angular/compiler-cli": "~13.0.0",
+    "@angular-devkit/build-angular": "^14.2.13",
+    "@angular-devkit/build-ng-packagr": "^0.1002.0",
+    "@angular/cli": "^14.2.13",
+    "@angular/compiler-cli": "^14.3.0",
     "@commitlint/cli": "15.0.0",
     "@commitlint/config-angular": "^15.0.0",
     "@commitlint/config-conventional": "^15.0.0",
@@ -88,12 +88,12 @@
     "karma-jasmine": "~4.0.1",
     "karma-jasmine-html-reporter": "^1.5.0",
     "lint-staged": "^12.1.2",
-    "ng-packagr": "^13.0.3",
+    "ng-packagr": "^14.2.2",
     "prettier": "^2.5.0",
     "standard-version": "^9.3.2",
     "ts-node": "~10.4.0",
     "tslint": "~6.1.0",
-    "typescript": "~4.4.4"
+    "typescript": "~4.8.4"
   },
   "config": {
     "commitizen": {
