docs: update to standalone API and schematics less installation

--- a/package.json
+++ b/package.json
@@ -34,12 +34,10 @@
     "contributors:add": "all-contributors add",
     "hooks:pre-commit": "node hooks/pre-commit.js",
     "commit": "git-cz",
-    "build:lib": "ng build @ngneat/edit-in-place && npm run schematics:build && npm run copy",
+    "build:lib": "ng build @ngneat/edit-in-place && npm run copy",
     "test:lib": "ng test @ngneat/edit-in-place",
     "release": "cd projects/ngneat/edit-in-place && standard-version --infile ../../../CHANGELOG.md",
-    "copy": "npm run schematics:copy && cp -r README.md dist/ngneat/edit-in-place",
-    "schematics:build": "npm run build --prefix ./schematics",
-    "schematics:copy": "cp -r schematics/src/ dist/ngneat/edit-in-place/schematics",
+    "copy": "cp -r README.md dist/ngneat/edit-in-place",
     "test:lib:headless": "cross-env CI=true npm run test:lib",
     "prettier:check": "prettier --check \"**\"",
     "prettier": "prettier --write \"**\""
