--- a/angular.json
+++ b/angular.json
@@ -116,7 +116,8 @@
             "production": {
               "tsConfig": "projects/ngneat/edit-in-place/tsconfig.lib.prod.json"
             }
-          }
+          },
+          "defaultConfiguration": "production"
         },
         "test": {
           "builder": "@angular-devkit/build-angular:karma",
